server/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users
spec:
  selector:
    app: users
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: mongo-host
spec:
  type: ExternalName
  externalName: host.docker.internal


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: localhost:5000/users:build
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            timeoutSeconds: 1
            periodSeconds: 1
            failureThreshold: 5
            initialDelaySeconds: 10
            httpGet:
              port: 8080
              path: /actuator/health
          livenessProbe:
            timeoutSeconds: 1
            periodSeconds: 1
            failureThreshold: 5
            initialDelaySeconds: 10
            httpGet:
              port: 8080
              path: /actuator/health
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
