server/k8s/logging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging

---
########### Elastic Search #############
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: logging
spec:
  selector:
    app: es-app
  ports:
  - port: 9200
    targetPort: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-app
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-app
  template:
    metadata:
      labels:
        app: es-app
    spec:
      containers:
      - name: es-app
        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
        ports:
        - containerPort: 9200
---
######## Kibana #########
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    app: kibana-app
  type: LoadBalancer  
  ports:
  - port: 5601
    targetPort: 5601

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-app
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-app
  template:
    metadata:
      labels:
        app: kibana-app    
    spec:
      containers:
      - name: kibana-app
        image: docker.elastic.co/kibana/kibana:6.6.2
        ports:
        - containerPort: 5601
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
  labels:
    k8s-app: fluent-bit-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-logging
        version: v1
        kubernetes.io/cluster-service: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
    spec:
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:1.0.4
        imagePullPolicy: Always
        ports:
          - containerPort: 2020
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config
      serviceAccountName: fluent-bit
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
