server/k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: users-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users
spec:
  hosts:
    - "*"
  gateways:
    - users-gateway
  http:
    - match:
      route:
        - destination:
            port:
              number: 8080
            host: users
